Removed Privacy page and fixed column overflow on Home Index

--- a/HabsForum/wwwroot/css/site.css
+++ b/HabsForum/wwwroot/css/site.css
@@ -32,7 +32,7 @@ body {
 
 .discussion-image-container {
     height: 100%;
-    width: 30vw;
+    width: 30%;
     overflow: clip;
     background: red;
     margin: 0;
@@ -47,11 +47,12 @@ body {
 .discussion-card {
     height: 20vh;
     max-height: 300px;
-    width: auto;
+    width: 100%;
 }
 
 .discussion-body {
     height: 100%;
+    width: 70%;
 }
 
 .card-text {
@@ -75,4 +76,9 @@ body {
 
 .comment {
     flex-direction: column-reverse;
+}
+
+.disc-title {
+    width: 100%;
+    text-overflow: ellipsis;
 }
